# patient-care-bot

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  voice_agent.py
local/: patient_details.json  patient_details_gaurav.yaml
src/: data_classes.py  runner.py
src/agents/: voice_agent.py
src/prompts/: prompt_manager.py
src/prompts/templates/: confirm_identity.j2  conversation_summary.j2  greeting.j2  greeting_instructions.j2  med_adherence.j2  med_adherence_instructions.j2  wellbeing.j2
src/tasks/: confirm_identity.py  med_adherence.py  wellbeing.py
src/tools/: agent_tools.py
src/vector_store/: index_manager.py  vector_store.py
